--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^12.0",
         "laravel/horizon": "^5.31",
         "laravel/scout": "^10.14",
+        "laravel/telescope": "^5.7",
         "laravel/tinker": "^2.10.1",
         "laravel/wayfinder": "^0.1.4",
         "spatie/laravel-data": "^4.15",
