--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/horizon": "^5.31",
+        "laravel/pulse": "^1.4",
         "laravel/scout": "^10.14",
         "laravel/telescope": "^5.7",
         "laravel/tinker": "^2.10.1",
