--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "aschmelyun/fleet": "^1.1",
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/horizon": "^5.31",
+        "laravel/pennant": "^1.16",
         "laravel/pulse": "^1.4",
         "laravel/scout": "^10.14",
         "laravel/telescope": "^5.7",
@@ -21,12 +21,14 @@
         "laravel/wayfinder": "^0.1.4",
         "spatie/laravel-data": "^4.15",
         "spatie/laravel-enum": "^3.2",
+        "spatie/laravel-permission": "^6.17",
         "spatie/laravel-query-builder": "^6.3",
         "spatie/laravel-sluggable": "^3.7",
         "spatie/laravel-typescript-transformer": "^2.5",
         "tightenco/ziggy": "^2.4"
     },
     "require-dev": {
+        "aschmelyun/fleet": "^1.1",
         "barryvdh/laravel-debugbar": "^3.15",
         "fakerphp/faker": "^1.23",
         "larastan/larastan": "^3.0",
