--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require": {
         "php": "^8.2",
         "inertiajs/inertia-laravel": "^2.0",
+        "lakm/laravel-comments": "^2.3",
         "laravel/framework": "^12.0",
         "laravel/horizon": "^5.31",
         "laravel/pennant": "^1.16",
