--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "php": "^8.2",
         "inertiajs/inertia-laravel": "^2.0",
         "lakm/laravel-comments": "^2.3",
-        "laravel/framework": "^12.0",
+        "laravel/framework": "12.13",
         "laravel/horizon": "^5.31",
         "laravel/pennant": "^1.16",
         "laravel/pulse": "^1.4",
