--- a/docker/easypanel/supervisord.conf
+++ b/docker/easypanel/supervisord.conf
@@ -18,7 +18,7 @@ process_name=%(program_name)s_%(process_num)02d
 command=php /app/artisan horizon
 autostart=true
 autorestart=true
-user=application
+user=%(ENV_SUPERVISOR_PHP_USER)s
 redirect_stderr=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
