--- a/docker/easypanel/supervisord.conf
+++ b/docker/easypanel/supervisord.conf
@@ -13,9 +13,38 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
+[program:laravel-worker]
+process_name=%(program_name)s_%(process_num)02d
+command=php /var/www/html/artisan queue:work --sleep=3 --tries=3 --max-time=3600
+autostart=true
+autorestart=true
+stopasgroup=true
+killasgroup=true
+user=%(ENV_SUPERVISOR_PHP_USER)s
+numprocs=8
+redirect_stderr=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+stopwaitsecs=3600
+
 [program:laravel-horizon]
 process_name=%(program_name)s_%(process_num)02d
-command=php /app/artisan horizon
+command=php /var/www/html/artisan horizon
+autostart=true
+autorestart=true
+user=%(ENV_SUPERVISOR_PHP_USER)s
+redirect_stderr=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+stopwaitsecs=3600
+
+[program:laravel-pail]
+process_name=%(program_name)s_%(process_num)02d
+command=php /var/www/html/artisan pail
 autostart=true
 autorestart=true
 user=%(ENV_SUPERVISOR_PHP_USER)s
