--- a/docker/easypanel/php.ini
+++ b/docker/easypanel/php.ini
@@ -1,5 +1,6 @@
-[PHP]
-post_max_size = 100M
-upload_max_filesize = 100M
-variables_order = EGPCS
-pcov.directory = .
+date.time = UTC
+display_errors = Off
+memory_limit = 128M
+max_execution_time = 60
+post_max_size = 32M
+upload_max_filesize = 16M
