--- a/docker/easypanel/Dockerfile
+++ b/docker/easypanel/Dockerfile
@@ -1,49 +1,40 @@
-FROM php:8.3-fpm-alpine
+FROM webdevops/php-nginx:8.4-alpine
 
-# Set working directory
-WORKDIR /opt/laravel
-
-# Install additional packages
-RUN apk --no-cache add \
-    nginx \
-    supervisor \
-    nodejs \
-    php84-redis \
-    && docker-php-ext-install pcntl \
-    && docker-php-ext-enable opcache \
-    && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+RUN apk add --no-cache \
+    nodejs
 
 # Copy Nginx configuration
 COPY docker/easypanel/nginx/default.conf /etc/nginx/nginx.conf
 
 # Copy PHP configuration
 COPY docker/easypanel/php-fpm/php-fpm.conf /usr/local/etc/php-fpm.d/www.conf
-
 COPY docker/easypanel/php/php.ini /usr/local/etc/php/conf.d/php.ini
 
+# Copy OPCache configuration
 COPY docker/easypanel/php/opcache.ini /usr/local/etc/php/conf.d/opcache.ini
 
 # Copy Supervisor configuration
 COPY docker/easypanel/supervisor/supervisord.conf /etc/supervisord.conf
 
+# Copy composer.json and composer.lock
+COPY composer.json composer.lock /app/
+
+# Install dependencies
+RUN composer install --no-interaction --no-scripts --no-suggest --no-dev --optimize-autoloader
+
 # Copy Laravel application files
-COPY . /opt/laravel
+COPY . /app
 
-RUN composer install --no-dev --no-interaction --no-scripts --optimize-autoloader
+# Install frontend dependencies and build assets
+RUN npm ci \
+    && npm run build:ssr
 
-RUN php artisan optimize:clear
-
-RUN php artisan config:cache
-
-RUN php artisan route:cache
-
-RUN php artisan view:cache
-
-RUN npm ci
-
-RUN npm run build:ssr
-
-RUN php artisan key:generate
+# Optimize Laravel
+RUN php artisan key:generate \
+    && php artisan optimize:clear \
+    && php artisan config:cache \
+    && php artisan route:cache \
+    && php artisan view:cache
 
 # Set up permissions
 RUN chown -R www-data:www-data /opt/laravel \
