--- a/docker/easypanel/nginx/default.conf
+++ b/docker/easypanel/nginx/default.conf
@@ -31,13 +31,17 @@ http {
     include /etc/nginx/conf.d/*.conf;
     include /etc/nginx/sites-enabled/*;
 
-    access_log /dev/stdout main;
+    access_log   /docker.stdout;
+    error_log    /docker.stderr warn;
 
     server {
-        listen 80;
-        root /opt/laravel/public;
+        listen 80 default_server;
 
-        index index.php index.html index.htm;
+        server_name _;
+
+        root "/app/public";
+
+        index index.php;
 
         location / {
             try_files $uri $uri/ /index.php?$query_string;
@@ -47,12 +51,13 @@ http {
         location ~ \.php$ {
             try_files $uri =404;
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
-            fastcgi_pass localhost:9000;
+            fastcgi_pass php;
             fastcgi_index index.php;
             include fastcgi_params;
             # Block httpoxy attacks. See https://httpoxy.org/.
             fastcgi_param HTTP_PROXY "";
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            fastcgi_param SCRIPT_FILENAME     $request_filename;
+            fastcgi_read_timeout 600;
             fastcgi_param PATH_INFO $fastcgi_path_info;
 
             # FastCGI buffering settings
